adding my stock, splitting out code to accom this

--- a/Beer/Views/Home/Index.cshtml
+++ b/Beer/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                     <button type="button" class="btn btn-info" id="allExtraPales" data-bind="click: SearchQuery.addExtraPales">Add All Extra Pales</button>
                     <button type="button" class="btn btn-info" id="allCrystal" data-bind="click: SearchQuery.addCrystal">Add All Crystal</button>
                     <button type="button" class="btn btn-info" id="allDarkCrystal" data-bind="click: SearchQuery.addDarkCrystal">Add All Dark Crystal</button>
-                    <button type="button" class="btn btn-info" id="myIngredients" data-bind="click: SearchQuery.addMyIngredients">Add My Ingredients</button>
+                    <button type="button" class="btn btn-info" id="myIngredients" data-bind="click: addMyIngredients">Add My Ingredients</button>
                 </div>
 
                 <label for="hops">Hops</label>
