--- a/Beer/Views/Shared/_Layout.cshtml
+++ b/Beer/Views/Shared/_Layout.cshtml
@@ -20,7 +20,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Search", "Index", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("My Stock", "Index", "MyStock", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
                 </ul>
             </div>
