--- a/Beer/Views/Shared/_Layout.cshtml
+++ b/Beer/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Search", "Index", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("My Stock", "Index", "MyStock", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Add Recipe", "Index", "AddRecipe", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
                 </ul>
             </div>
