--- a/Beer/Views/AddRecipe/Index.cshtml
+++ b/Beer/Views/AddRecipe/Index.cshtml
@@ -12,153 +12,174 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h2 class="panel-title">Add Recipe</h2>
+
+        <div class="page-header">
+            <h2>Add Recipe</h2>
+        </div>
+
+        <form data-bind="submit: addRecipe" class="form-horizontal">
+
+            <div class="form-group">
+                <label for="Source2" class="col-sm-1 control-label">Source</label>
+                <div class="col-sm-11">
+                    <input type="text" class="form-control" id="Source2" data-bind="value:newRecipe.Source2" />
+                </div>
+                <br />
             </div>
-            <div class="panel-body">
-                <form data-bind="submit: addRecipe">
-                    <label for="Source2">Source</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" id="Source2" data-bind="value:newRecipe.Source2" />
-                        <br />
-                    </div>
-                    <label for="Number">Number</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" id="Number" data-bind="value:newRecipe.Number" />
-                        <br />
-                    </div>
 
-                    <label for="Name">Name</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" id="Name" data-bind="value:newRecipe.Name" />
-                        <br />
+            <div class="form-group">
+                <label for="Number" class="col-sm-1 control-label">Number</label>
+                <div class="col-sm-11">
+                    <input type="text" class="form-control" id="Number" data-bind="value:newRecipe.Number" />
+                    <br />
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="Name" class="col-sm-1 control-label">Name</label>
+                <div class="col-sm-11">
+                    <input type="text" class="form-control" id="Name" data-bind="value:newRecipe.Name" />
+                </div>
+                <br />
+            </div>
+            <div class="form-group">
+                <label for="YeastID" class="col-sm-1 control-label">Yeast</label>
+                <div class="col-sm-11">
+                    <select id="YeastID" data-bind="options: Yeasts.Yeast, optionsText: 'yeastName', optionsValue : 'id', value: newRecipe.YeastID, select2: {selection: newRecipe.YeastID, closeOnSelect: true}" size="10" class="form-control" style="width: 100%"></select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="BeerStylesID" class="col-sm-1 control-label">Beer Style</label>
+                <div class="col-sm-11">
+                    <select id="BeerStylesID" data-bind="options: BeerStyle.BeerStyle, optionsText: 'subCategoryName', optionsValue : 'id', value: newRecipe.BeerStylesID, select2: {selection: newRecipe.BeerStylesID, closeOnSelect: true}" size="10" class="form-control" style="width: 100%"></select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="ABV" class="col-sm-1 control-label">ABV</label>
+                <div class="col-sm-11">
+                    <input type="text" class="form-control" id="ABV" data-bind="value:newRecipe.ABV" />
                     </div>
-                    @*<label for="name">Yeast</label>
-        <div class="form-group">
-            <input type="text" class="form-control" style="width: 100%" id="YeastID" data-bind="value:newRecipe.YeastID" />
-            <br />
-        </div>*@
-                    <label for="YeastID">Yeast</label>
-                    <div class="form-group">
-                        <select id="YeastID" data-bind="options: Yeasts.Yeast, optionsText: 'yeastName', optionsValue : 'id', value: newRecipe.YeastID, select2: {selection: newRecipe.YeastID, closeOnSelect: true}" size="10" class="form-control" style="width: 100%"></select>
+                </div>
+                <div class="form-group">
+                    <label for="IBU" class="col-sm-1 control-label">IBU</label>
+                    <div class="col-sm-11">
+                        <input type="text" class="form-control" id="IBU" data-bind="value:newRecipe.IBU" />
                     </div>
-
-                    <label for="BeerStylesID">Beer Style</label>
-                    <div class="form-group">
-                        <select id="BeerStylesID" data-bind="options: BeerStyle.BeerStyle, optionsText: 'subCategoryName', optionsValue : 'id', value: newRecipe.BeerStylesID, select2: {selection: newRecipe.BeerStylesID, closeOnSelect: true}" size="10" class="form-control" style="width: 100%"></select>
+                </div>
+                <div class="form-group">
+                    <label for="OG" class="col-sm-1 control-label">OG</label>
+                    <div class="col-sm-11">
+                        <input type="text" class="form-control" id="OG" data-bind="value:newRecipe.OG" />
                     </div>
-
-                    @*<label for="name">Name</label>
-        <div class="form-group">
-            <input type="text" class="form-control" style="width: 100%" id="name" data-bind="value:newRecipe.ID" />
-            <br />
-        </div>*@
-                    <label for="ABV">ABV</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" id="ABV" data-bind="value:newRecipe.ABV" />
-                        <br />
+                </div>
+                <div class="form-group">
+                    <label for="FG" class="col-sm-1 control-label">FG</label>
+                    <div class="col-sm-11">
+                        <input type="text" class="form-control" id="FG" data-bind="value:newRecipe.FG" />
                     </div>
-                    <label for="IBU">IBU</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" id="IBU" data-bind="value:newRecipe.IBU" />
-                        <br />
+                </div>
+                <div class="form-group">
+                    <label for="EBC" class="col-sm-1 control-label">EBC</label>
+                    <div class="col-sm-11">
+                        <input type="text" class="form-control" id="EBC" data-bind="value:newRecipe.EBC" />
                     </div>
-                    <label for="OG">OG</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" id="OG" data-bind="value:newRecipe.OG" />
-                        <br />
+                </div>
+                <div class="form-group">
+                    <label for="HasAdjucts" class="col-sm-1 control-label">HasAdjuncts</label>
+                    <div class="col-sm-11">
+                        <input type="text" class="form-control" id="HasAdjucts" data-bind="value:newRecipe.HasAdjucts" />
                     </div>
-                    <label for="FG">FG</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" id="FG" data-bind="value:newRecipe.FG" />
-                        <br />
+                </div>
+                <div class="form-group">
+                    <label for="MashTemp" class="col-sm-1 control-label">MashTemp</label>
+                    <div class="col-sm-11">
+                        <input type="text" class="form-control" id="MashTemp" data-bind="value:newRecipe.MashTemp" />
                     </div>
-                    <label for="EBC">EBC</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" id="EBC" data-bind="value:newRecipe.EBC" />
-                        <br />
+                </div>
+                <div class="form-group">
+                    <label for="MashTime" class="col-sm-1 control-label">MashTime</label>
+                    <div class="col-sm-11">
+                        <input type="text" class="form-control" id="MashTime" data-bind="value:newRecipe.MashTime" />
                     </div>
-                    <label for="HasAdjucts">HasAdjuncts</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" id="HasAdjucts" data-bind="value:newRecipe.HasAdjucts" />
-                        <br />
+                </div>
+                <div class="form-group">
+                    <label for="Fermentation" class="col-sm-1 control-label">Fermentation</label>
+                    <div class="col-sm-11">
+                        <input type="text" class="form-control" id="Fermentation" data-bind="value:newRecipe.Fermentation" />
                     </div>
-                    <label for="MashTemp">MashTemp</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" id="MashTemp" data-bind="value:newRecipe.MashTemp" />
-                        <br />
+                </div>
+                <div class="form-group">
+                    <label for="Description" class="col-sm-1 control-label">Decsription</label>
+                    <div class="col-sm-11">
+                        <input type="text" class="form-control" id="Description" data-bind="value:newRecipe.Description" />
                     </div>
-                    <label for="MashTime">MashTime</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" id="MashTime" data-bind="value:newRecipe.MashTime" />
-                        <br />
+                </div>
+                <div class="form-group">
+                    <label for="Tips" class="col-sm-1 control-label">Tips</label>
+                    <div class="col-sm-11">
+                        <input type="text" class="form-control" id="Tips" data-bind="value:newRecipe.Tips" />
                     </div>
-                    <label for="Fermentation">Fermentation</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" id="Fermentation" data-bind="value:newRecipe.Fermentation" />
-                        <br />
-                    </div>
-                    <label for="Description">Decsription</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" id="Description" data-bind="value:newRecipe.Description" />
-                        <br />
-                    </div>
-                    <label for="Tips">Tips</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" id="Tips" data-bind="value:newRecipe.Tips" />
-                        <br />
-                    </div>
-                    <!-- ko foreach: newRecipe.Recipe_Malts -->
-                    <label data-bind="uniqueFor: MaltGenericID">Malts</label>
-                    <div class="form-group">
+                </div>
+                <!-- ko foreach: newRecipe.Recipe_Malts -->
+                <div class="form-group">
+                    <label data-bind="uniqueFor: MaltGenericID" class="col-sm-1 control-label">Malts</label>
+                    <div class="col-sm-11">
                         <select data-bind="options: $root.Malts.Malt, optionsText: 'malt', optionsValue : 'id', value: MaltGenericID, select2: {selection: MaltGenericID, closeOnSelect: true}, uniqueId: MaltGenericID" size="10" class="form-control" style="width: 100%"></select>
-                        <br />
                     </div>
-
-                    <label data-bind="uniqueFor: Weight">Weight</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" data-bind="value:Weight, uniqueId: Weight" />
-                        <br />
+                </div>
+                <div class="form-group">
+                    <label data-bind="uniqueFor: Weight" class="col-sm-1 control-label">Weight</label>
+                    <div class="col-sm-11">
+                        <input type="text" class="form-control" data-bind="value:Weight, uniqueId: Weight" />
                     </div>
+                </div>
 
-                    <!-- /ko -->
-                    <button data-bind="click: addMalt" class="btn btn-info">Add Malt</button><br />
-                    <!-- ko foreach: newRecipe.Recipe_Hops -->
-                    <label data-bind="uniqueFor: HopID">Hops</label>
-                    <div class="form-group">
+                <!-- /ko -->
+                <button data-bind="click: addMalt" class="btn btn-info">Add Malt</button><br />
+                <!-- ko foreach: newRecipe.Recipe_Hops -->
+                <div class="form-group">
+                    <label data-bind="uniqueFor: HopID" class="col-sm-1 control-label">Hops</label>
+                    <div class="col-sm-11">
                         <select data-bind="options: $root.Hops.Hop, optionsText: 'hops', optionsValue : 'id', value: HopID, select2: {selection: HopID, closeOnSelect: true}, uniqueId: HopID" size="10" class="form-control" style="width: 100%"></select>
                     </div>
-                    <label data-bind="uniqueFor: Weight">Weight</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" data-bind="value:Weight, uniqueId: Weight" />
-                        <br />
+                </div>
+                <div class="form-group">
+                    <label data-bind="uniqueFor: Weight" class="col-sm-1 control-label">Weight</label>
+                    <div class="col-sm-11">
+                        <input type="text" class="form-control" data-bind="value:Weight, uniqueId: Weight" />
                     </div>
-                    <label data-bind="uniqueFor: StepID">Usage Time</label>
-                    <div class="form-group">
+                </div>
+                <div class="form-group">
+                    <label data-bind="uniqueFor: StepID" class="col-sm-1 control-label">Usage Time</label>
+                    <div class="col-sm-11">
                         <select data-bind="options: $root.HopSteps.HopStep, optionsText: 'step', optionsValue : 'id', value: StepID, select2: {selection: StepID, closeOnSelect: true}, uniqueId: StepID" size="10" class="form-control" style="width: 100%"></select>
                     </div>
-                    <!-- /ko -->
-                    <button data-bind="click: addHop" class="btn btn-info">Add Hop</button><br />
-                    <!-- ko foreach: newRecipe.Recipe_Others -->
-                    <label data-bind="uniqueFor: OtherID">Extras</label>
-                    <div class="form-group">
+                </div>
+                <!-- /ko -->
+                <button data-bind="click: addHop" class="btn btn-info">Add Hop</button><br />
+                <!-- ko foreach: newRecipe.Recipe_Others -->
+                <div class="form-group">
+                    <label data-bind="uniqueFor: OtherID" class="col-sm-1 control-label">Extras</label>
+                    <div class="col-sm-11">
                         <select data-bind="options: $root.Others.Other, optionsText: 'other', optionsValue : 'id', value: OtherID, select2: {selection: OtherID, closeOnSelect: true}, uniqueId: OtherID" size="10" class="form-control" style="width: 100%"></select>
                     </div>
-                    <label data-bind="uniqueFor: Weight">Weight</label>
-                    <div class="form-group">
-                        <input type="text" class="form-control" style="width: 100%" data-bind="value:Weight, uniqueId: Weight" />
-                        <br />
+                </div>
+                <div class="form-group">
+                    <label data-bind="uniqueFor: Weight" class="col-sm-1 control-label">Weight</label>
+                    <div class="col-sm-11">
+                        <input type="text" class="form-control" data-bind="value:Weight, uniqueId: Weight" />
                     </div>
-                    <label data-bind="uniqueFor: StepID">Usage Time</label>
-                    <div class="form-group">
+                </div>
+                <div class="form-group">
+                    <label data-bind="uniqueFor: StepID" class="col-sm-1 control-label">Usage Time</label>
+                    <div class="col-sm-11">
                         <select data-bind="options: $root.HopSteps.HopStep, optionsText: 'step', optionsValue : 'id', value: StepID, select2: {selection: StepID, closeOnSelect: true}, uniqueId: StepID" size="10" class="form-control" style="width: 100%"></select>
                     </div>
-                    <!-- /ko -->
-                    <button data-bind="click: addOther" class="btn btn-info">Add Extra</button><br />
-                    <button type="submit" class="btn btn-default">Save Recipe</button>
-                </form>
-        </div>
-            </div>
-        </div>
+                </div>
+                <!-- /ko -->
+                <button data-bind="click: addOther" class="btn btn-info">Add Extra</button><br />
+                <button type="submit" class="btn btn-default">Save Recipe</button>
+</form>
+
+
+    </div>
 </div>
